--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ftbl/table",
-  "version": "1.0.1",
+  "name": "@recipher/table",
+  "version": "1.0.2",
   "description": "React table components",
   "main": "dist/index",
   "scripts": {
@@ -16,10 +16,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "git@github.com:projectftbl/table.git"
+    "url": "git@github.com:recipher/table.git"
   },
   "dependencies": {
-    "@ftbl/navigation": "^1.0.1",
+    "@recipher/navigation": "^1.0.1",
     "color": "^0.10.1",
     "lodash": "^3.10.1",
     "radium": "^0.16.6",
@@ -27,7 +27,7 @@
     "redux-react-local": "^1.4.0"
   },
   "devDependencies": {
-    "@ftbl/gulp": "^1.5.0",
+    "@recipher/gulp": "^1.5.0",
     "babel": "^6.3.26",
     "babel-cli": "^6.4.5",
     "babel-core": "^6.4.5",
